--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
         <main>
             <nav>
                 <ul>
-                    <li><a href='https://ko-fi.com/darkorlf'><img class='logo' src='./images/Ko-fi_Icon_RGBforDarkBg.png' alt='ko-fi logo'>Ko-fi</a></li>
-                    <li><a href='https://todasgamers.com/author/DarkorLF'><img class='logo' src='./images/tg-pug.jpg' alt='Todas Gamers logo'>Todas Gamers</a></li>
-                    <li><a href='https://todasgamers.com/category/podcast/'><img class='logo' src='./images/pugcast2_transparente.png' alt='El Pugcast logo'>El Pugcast</a></li>
-                    <li><a href='https://lanaveinvisible.com/tag/Darkor_LF'><img class='logo' src='./images/LNI.png' alt='La Nave Invisible logo'>La Nave Invisible</a></li>
-                    <li><a href='https://lektu.com/a/darkor-lf/7894'><img class='logo' src='./images/lektu.png' alt='Lektu logo'>Lektu</a></li>
-                    <li><a href='https://www.goodreads.com/author/show/20210803.Darkor_LF'><img class='logo' src="./images/Goodreads_'g'_logo.png" alt='Goodreads logo'>Goodreads</a></li>
-                    <li><a href='https://letterboxd.com/Darkor_LF/'><img class='logo' src='./images/letterboxd-mac-icon.png' alt='Letterboxd logo'>Letterboxd</a></li>
-                    <li><a href='https://twitter.com/Darkor_LF'><img class='logo' src='./images/Twitter_Logo_Blue.png' alt='Twitter logo'>Twitter</a></li>
+                    <li><a href='https://ko-fi.com/darkorlf' target='_blank'><img class='logo' src='./images/Ko-fi_Icon_RGBforDarkBg.png' alt='ko-fi logo'>Ko-fi</a></li>
+                    <li><a href='https://todasgamers.com/author/DarkorLF' target='_blank'><img class='logo' src='./images/tg-pug.jpg' alt='Todas Gamers logo'>Todas Gamers</a></li>
+                    <li><a href='https://todasgamers.com/category/podcast/' target='_blank'><img class='logo' src='./images/pugcast2_transparente.png' alt='El Pugcast logo'>El Pugcast</a></li>
+                    <li><a href='https://lanaveinvisible.com/tag/Darkor_LF'target='_blank'><img class='logo' src='./images/LNI.png' alt='La Nave Invisible logo'>La Nave Invisible</a></li>
+                    <li><a href='https://lektu.com/a/darkor-lf/7894' ><img class='logo' src='./images/lektu.png' alt='Lektu logo'>Lektu</a></li>
+                    <li><a href='https://www.goodreads.com/author/show/20210803.Darkor_LF' target='_blank'><img class='logo' src="./images/Goodreads_'g'_logo.png" alt='Goodreads logo'>Goodreads</a></li>
+                    <li><a href='https://letterboxd.com/Darkor_LF/' target='_blank'><img class='logo' src='./images/letterboxd-mac-icon.png' alt='Letterboxd logo'>Letterboxd</a></li>
+                    <li><a href='https://twitter.com/Darkor_LF' target='_blank'><img class='logo' src='./images/Twitter_Logo_Blue.png' alt='Twitter logo'>Twitter</a></li>
                 </ul>
             </nav>
             
