--- a/index.html
+++ b/index.html
@@ -43,12 +43,16 @@
             </nav>
             
             <section class='about'>
-                <p>Darkor_LF (Madrid, 1989) es el pseudónimo de una física que descubrió a tiempo que la investigación no era lo suyo y ahora trabaja como desarrolladora web. Cuando el capitalismo le deja se dedica a leer, jugar videojuegos y ver películas y series. Tras unos años empezó a tener opiniones al respecto y se coló en algunas páginas web.</p>
-                <p> Es colaboradora y editora en la web semiprofesional de videojuegos <a href="https://todasgamers.com/" target="_blank">Todas Gamers</a>, donde sólo colaboran mujeres y personas no binarias. Podéis leerla opinar sobre Final Fantasy, Kingdom Hearts o que el mejor minijuego de pesca está en <i>Dark Chronicle</i>. Además es la directora del Podcast de Todas Gamers (aka, <a href="https://todasgamers.com/category/podcast/" target="_blank">El Pugcast</a>), donde colabora con la sección sobre Historia del Videojuego.</p>
+                <h3 class="section-title">Sobre mí</h3>
+                <p>Darkor_LF (Madrid, 1989) es el pseudónimo de una física que probó trabajar en investigación para descubrir que no era lo que le llenaba y ahora trabaja como desarrolladora web. Cuando el trabajo diario le deja se dedica a leer, jugar videojuegos y ver películas y series. Tras unos años empezó a tener opiniones al respecto y se coló en algunas páginas web.</p>
+                <p>Es colaboradora y editora en la web semiprofesional de videojuegos <a href="https://todasgamers.com/" target="_blank">Todas Gamers</a>, donde sólo colaboran mujeres y personas no binarias. Podéis leerla opinar sobre Final Fantasy, Kingdom Hearts o que el mejor minijuego de pesca está en <i>Dark Chronicle</i>. También es la directora del Podcast de Todas Gamers (aka, <a href="https://todasgamers.com/category/podcast/" target="_blank">El Pugcast</a>), donde colabora con la sección sobre Historia del Videojuego.</p>
                 <p>Además es colaboradora en <a href='https://lanaveinvisible.com' target="_blank">La Nave Invisible</a>, proyecto centrado en la visibilización de autoras y autores no binaries, sobre todo en la web, aunque a veces se cuela en su podcast. También participa en el fanzine <a href="https://lektu.com/e/untitledzines/1539" target="_blank">Untitled Zines</a>, donde cada número gira en torno a una temática concreta.</p>
                 <p>En los ratos que tiene libres se dedica a escribir ficción. Actualmente cuenta con tres relatos autopublicados de la serie <a href="https://lektu.com/c/darkor-lf/1288/los-viajes-de-la-islandia" target="_blank">Los viajes de la Islandia</a>, space opera humorística que se centra en las desventuras de la tripulación de la Vieja Islandia: <i>Protocolos revisados definitivos V6-XVI</i>, <i>La ruta de la Montaña Mística</i> y <i>Asalto a la cámara acorazada</i>. Su otra gran obsesión escribiendo son los viajes en el tiempo, con el relato autopublicado <i>Rebobinar</i>, o el relato <a href="https://www.editorialcerbero.com/pargo/" target="_blank"><i>El rescate del pargo</i></a> disponible en la web de la editorial Cerbero.
-                Tiene hiperfijaciones periódicas entre las que destacan: <i>Hamilton</i>, la mitología nórdica (porque le hace gracia, no por ser nazi), <i>Final Fantasy IX</i>, <i>Final Fantasy XV</i>, Kingdom Hearts, la trilogía del Imperio del Radch, la saga Vorkosigan, Mundodisco, <i>One Piece</i>, la saga Kung Fu Panda, <i>Psych</i> y el Universo Marvel
-                Cinematográfico.           
+                Tiene hiperfijaciones periódicas entre las que destacan: <i>Hamilton</i>, la mitología nórdica, <i>Final Fantasy IX</i>, <i>Final Fantasy XV</i>, Kingdom Hearts, la trilogía del Imperio del Radch, la saga Vorkosigan, Mundodisco, <i>One Piece</i>, la saga Kung Fu Panda, <i>Psych</i> y el Universo Marvel
+                Cinematográfico.   
+                <div class="more-info">
+                    <button><a href="/fiction.html">Ficción</a></button> <button><a href="/non-fiction.html">No ficción</a></button>
+                </div>
             </section>
 
             <section class="contact">
