--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 Tiene hiperfijaciones periódicas entre las que destacan: <i>Hamilton</i>, la mitología nórdica, <i>Final Fantasy IX</i>, <i>Final Fantasy XV</i>, Kingdom Hearts, la trilogía del Imperio del Radch, la saga Vorkosigan, Mundodisco, <i>One Piece</i>, la saga Kung Fu Panda, <i>Psych</i> y el Universo Marvel
                 Cinematográfico.   
                 <div class="more-info">
-                    <button><a href="/fiction.html">Ficción</a></button> <button><a href="/non-fiction.html">No ficción</a></button>
+                    <button><a href="/contact/fiction.html">Ficción</a></button> <button><a href="/non-fiction.html">No ficción</a></button>
                 </div>
             </section>
 
