--- a/fiction.html
+++ b/fiction.html
@@ -191,7 +191,7 @@
                 </article>
 </div>
         <div class="more-info">
-            <button><a href="/non-fiction.html">No ficción</a></button> <button><a href="/index.html">Sobre mí</a></button>
+            <button><a href="/contact/non-fiction">No ficción</a></button> <button><a href="/contact">Sobre mí</a></button>
         </div>
             </section>
 
