--- a/non-fiction.html
+++ b/non-fiction.html
@@ -297,7 +297,7 @@
 
                 </div>
 <div class="more-info">
-    <button><a href="/fiction.html">Ficción</a></button> <button><a href="/index.html">Sobre mí</a></button>
+    <button><a href="/contact/fiction">Ficción</a></button> <button><a href="/contact">Sobre mí</a></button>
 </div>
             </section>
 
