--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     escribiendo son los viajes en el tiempo, con el relato autopublicado <i>Rebobinar</i>, o el relato
                     <a href="https://www.editorialcerbero.com/pargo/" target="_blank"><i>El rescate del pargo</i></a>
                     disponible en la web de la editorial Cerbero.
-                    Tiene hiperfijaciones periódicas entre las que destacan: <i>Hamilton</i>, la mitología nórdica,
+                    <p>Tiene hiperfijaciones periódicas entre las que destacan: <i>Hamilton</i>, la mitología nórdica,
                     <i>Final Fantasy IX</i>, <i>Final Fantasy XV</i>, Kingdom Hearts, la trilogía del Imperio del Radch,
                     la saga Vorkosigan, Mundodisco, <i>One Piece</i>, la saga Kung Fu Panda, <i>Psych</i> y el Universo
                     Marvel
