--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         rel="stylesheet">
 
     <title>Darkor_LF Contacto</title>
+    <meta name="keywords" content="Contacto,ficción,relatos,ensayo,Darkor_LF">
 </head>
 
 <body>
@@ -56,7 +57,7 @@
                 
                 <img class="profile-photo" src="./images/Darkor_LF_2.jpg" alt="Foto de la autora">
                 <p>Darkor_LF (Madrid, 1989) es el pseudónimo de una física que probó trabajar en investigación para
-                    descubrir que no era lo que le llenaba y ahora trabaja como desarrolladora web. Cuando el trabajo
+                    descubrir que no era lo que le llenaba y ahora se gana el pan como desarrolladora web. Cuando el trabajo
                     diario le deja se dedica a leer, jugar videojuegos y ver películas y series. Tras unos años empezó a
                     tener opiniones al respecto y se coló en algunas páginas web.</p>
                 <p>Es redactora y editora en la web independiente de videojuegos <a href="https://todasgamers.com/"
