--- a/non-fiction.html
+++ b/non-fiction.html
@@ -13,6 +13,8 @@
         rel="stylesheet">
 
     <title>Darkor_LF Contacto ficción</title>
+    <meta name="keywords" content="Contacto,ficción,relatos,ensayo,Darkor_LF">
+
 </head>
 
 <body>
