--- a/index.html
+++ b/index.html
@@ -68,9 +68,18 @@
                     con la sección sobre Historia del Videojuego.</p>
                 <p>Además es colaboradora en <a href='https://lanaveinvisible.com' target="_blank">La Nave
                         Invisible</a>, proyecto centrado en la visibilización de autoras y autores no binaries, sobre
-                    todo en la web, aunque a veces se cuela en su podcast. También participa en el fanzine <a
+                    todo en la web, aunque a veces se cuela en su podcast (ganadora a Mejor página web en los Premios Ignotus 2018, 2019, 2020, 201 y 2022). También participa en el fanzine <a
                         href="https://lektu.com/e/untitledzines/1539" target="_blank">Untitled Zines</a>, donde cada
                     número gira en torno a una temática concreta.</p>
+                    <p>
+                        En 2021 impulsó la recopilación de dos libros de ensayo, <a href='https://lektu.com/l/todas-gamers/todas-gamers-quinto-aniversario-vol-1-ahora-en-ebook/18108' target="_blank"><i>Todas Gamers Quinto Aniversario Vol 1. Ahora en ebook</i></a> y <a href='https://lektu.com/l/todas-gamers/todas-gamers-quinto-aniversario-vol-2-mas-esdrujulas/18208' target="_blank"><i>Todas
+                        Gamers Quinto Aniversario Vol 2. Ahora con más esdrújulas</i></a>. Ambos recopilan textos publicados en la página web de Todas
+                        Gamers con motivo de su quinto aniversario. Además, en el segundo volumen colabora con el artículo «Marvel’s Spiderman y
+                        la ciudad de Nueva York» y el artículo exclusivo «La loca línea temporal de Kingdom Hearts revisitada. Ahora con más
+                        lágrimas». Este libro fue finalista de los premios Ignotus 2022 a Mejor Libro de Ensayo. También forma parte del libro
+                        de ensayo <a href='https://lektu.com/l/laura-moran-iglesias/la-nave-invisible-5-anos-de-travesia/18875' target="_blank"><i>La Nave Invisible. Cinco años de travesía</i></a> (premio Ignotus a Mejor Libro de Ensayo 2022), con el artículo «Moto
+                        Hagio y la generación del 24».
+                    </p>
                 <p>En los ratos que tiene libres se dedica a escribir ficción. Actualmente cuenta con tres relatos
                     autopublicados de la serie <a href="https://lektu.com/c/darkor-lf/1288/los-viajes-de-la-islandia"
                         target="_blank">Los viajes de la Islandia</a>, space opera humorística que se centra en las
