--- a/fiction.html
+++ b/fiction.html
@@ -239,6 +239,8 @@
                 <ul>
                     <li><a href='https://twitter.com/Darkor_LF' target="_blank"><img class='contact-twitter'
                                 src='./images/twitter.png' alt='Twitter logo'></a></li>
+                    <li><a href='https://mastodon.social/@darkor_LF' target="_blank"><img class='contact-twitter'
+                                src='./images/mastodon_logo_icon.png' alt='Mastadon logo'></a></li>
                     <li><a href='malito:darkor.lf.faraday@gmail.com' target="_blank"><img class='contact-email'
                                 src='./images/email.png' alt='Email logo'></a></li>
 
