--- a/index.html
+++ b/index.html
@@ -14,23 +14,26 @@
 
     <title>Darkor_LF Contacto</title>
     <meta name="keywords" content="Contacto,ficción,relatos,ensayo,Darkor_LF">
+    <script src="https://kit.fontawesome.com/13821c6ab3.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
     <div class='wrapper'>
 
         <header>
-            <section class="hero">
-                <div class="hero-bck"></div>
-                <div class='hero-text'>
-                    <h1>Darkor_LF</h1>
-                    <h2>Antes física, ahora desarrolladora web. También escritora.</h2>
-                </div>
-            </section>
-        </header>
+            <div class="upper-menu">
+                <a class="home" href="/contact"><i class="fa-solid fa-house"></i></a>
 
-        <main>
-            <nav>
+                <nav class="navigation">
+                    <ul>
+                        <li><a href="/contact/fiction">Ficción</a></li>
+                        <li><a href="/contact/non-fiction">No ficción</a></li>
+                    </ul>
+
+                </nav>
+            </div>
+
+            <nav class="nav-links">
                 <ul>
                     <li><a href='https://ko-fi.com/darkorlf' target="_blank"><img class='logo'
                                 src='./images/Ko-fi_Icon_RGBforDarkBg.png' alt='ko-fi logo'>Ko-fi</a></li>
@@ -52,6 +55,9 @@
                 </ul>
             </nav>
 
+        </header>
+
+        <main>
             <section class='about'>
                 <h3 class="section-title">Sobre mí</h3>
 
@@ -108,30 +114,24 @@
                     Cinematográfico.
                 </p>
 
-                <div class="more-info">
-                    <button><a href="/contact/fiction">Ficción</a></button> <button><a href="/contact/non-fiction">No
-                            ficción</a></button>
-                </div>
+                
 
             </section>
 
+        </main>
+        <footer>
             <section class="contact">
-                <h2>Contacto</h2>
+                <p>Contacto</p>
                 <ul>
-                    <li><a href='https://twitter.com/Darkor_LF' target="_blank"><img class='contact-twitter'
-                                src='./images/twitter.png' alt='Twitter logo'></a></li>
-                    <li><a href='https://mastodon.social/@darkor_LF' target="_blank"><img class='contact-twitter'
-                                src='./images/mastodon_logo_icon.png' alt='Mastadon logo'></a></li>
-                    <li><a href='malito:darkor.lf.faraday@gmail.com' target="_blank"><img class='contact-email'
-                                src='./images/email.png' alt='Email logo'></a></li>
+                    <li><a href='https://twitter.com/Darkor_LF' target="_blank"><i class="fa-brands fa-twitter"></i></a></li>
+                    <li><a href='https://mastodon.social/@darkor_LF' target="_blank"><i class="fa-brands fa-mastodon"></i></a></li>
+                    <li><a href='malito:darkor.lf.faraday@gmail.com' target="_blank"><i class="fa-regular fa-envelope"></i></a></li>
 
                 </ul>
 
             </section>
 
-        </main>
 
-        <footer>
             <p>&copy;
                 <script>document.write(new Date().getFullYear())</script> por Darkor_LF
             </p>
