--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
         <header>
             <div class="upper-menu">
-                <a class="home" href="/contact"><i class="fa-solid fa-house"></i></a>
+                <a class="home" href="/contact" aria-label="Inicio"><i class="fa-solid fa-house" alt="Inicio"></i></a>
 
                 <nav class="navigation">
                     <ul>
@@ -59,7 +59,7 @@
 
         <main>
             <section class='about'>
-                <h3 class="section-title">Sobre mí</h3>
+                <h1 class="section-title">Sobre mí</h1>
 
                 <img class="profile-photo" src="./images/Darkor_LF_2.jpg" alt="Foto de la autora">
                 <p>Darkor_LF (Madrid, 1989) es el pseudónimo de una física que probó trabajar en investigación para
@@ -114,27 +114,32 @@
                     Cinematográfico.
                 </p>
 
-                
+                <h2 class="bio-breve">Biografía corta</h2>
+                <p>Antes física, ahora desarrolladora web. Es editora y redactora en Todas Gamers, además de colaborar y dirigir El
+                Pugcast. Ha autopublicado varios relatos de <i>space opera</i> y viajes en el tiempo, sus dos géneros favoritos. Si dispones de un par de semanas libres, puedes preguntarle por Kingdom Hearts, la saga Vorkosigan o Final Fantasy.</p>
+                <p>Redes sociales: <a href="https://twitter.com/Darkor_LF">Twitter</a> y <a href="https://mastodon.social/@darkor_LF">Mastodon</a></p>
 
             </section>
 
         </main>
-        <footer>
-            <section class="contact">
-                <p>Contacto</p>
-                <ul>
-                    <li><a href='https://twitter.com/Darkor_LF' target="_blank"><i class="fa-brands fa-twitter"></i></a></li>
-                    <li><a href='https://mastodon.social/@darkor_LF' target="_blank"><i class="fa-brands fa-mastodon"></i></a></li>
-                    <li><a href='malito:darkor.lf.faraday@gmail.com' target="_blank"><i class="fa-regular fa-envelope"></i></a></li>
+<footer>
+    <section class="contact">
+        <h3>Contacto</h3>
+        <ul>
+            <li><a href='https://twitter.com/Darkor_LF' target="_blank" aria-label="Twitter"><i
+                        class="fa-brands fa-twitter" alt="Twitter"></i></a></li>
+            <li><a href='https://mastodon.social/@darkor_LF' target="_blank" aria-label="Mastodon"><i
+                        class="fa-brands fa-mastodon" alt="Mastodon"></i></a>
+            </li>
+            <li><a href='malito:darkor.lf.faraday@gmail.com' target="_blank" aria-label="Email"><i
+                        class="fa-regular fa-envelope" alt="Email"></i></a>
+            </li>
+        </ul>
+    </section>
 
-                </ul>
-
-            </section>
-
-
-            <p>&copy;
-                <script>document.write(new Date().getFullYear())</script> por Darkor_LF
-            </p>
-        </footer>
+    <p>&copy;
+        <script>document.write(new Date().getFullYear())</script> por Darkor_LF
+    </p>
+</footer>
     </div>
 </body>
