--- a/non-fiction.html
+++ b/non-fiction.html
@@ -22,7 +22,8 @@
 
                 <header>
                         <div class="upper-menu">
-                                <a class="home" href="/contact"><i class="fa-solid fa-house"></i></a>
+                                                <a class="home" href="/contact" aria-label="Inicio"><i class="fa-solid fa-house" alt="Inicio"></i></a>
+
 
                                 <nav class="navigation">
                                         <ul>
@@ -396,25 +397,24 @@
                         </section>
 
                 </main>
-                <footer>
-                        <section class="contact">
-                                <p>Contacto</p>
-                                <ul>
-                                        <li><a href='https://twitter.com/Darkor_LF' target="_blank"><i
-                                                                class="fa-brands fa-twitter"></i></a></li>
-                                        <li><a href='https://mastodon.social/@darkor_LF' target="_blank"><i
-                                                                class="fa-brands fa-mastodon"></i></a></li>
-                                        <li><a href='malito:darkor.lf.faraday@gmail.com' target="_blank"><i
-                                                                class="fa-regular fa-envelope"></i></a></li>
+<footer>
+        <section class="contact">
+                <h3>Contacto</h3>
+                <ul>
+                        <li><a href='https://twitter.com/Darkor_LF' target="_blank" aria-label="Twitter"><i
+                                                class="fa-brands fa-twitter" alt="Twitter"></i></a></li>
+                        <li><a href='https://mastodon.social/@darkor_LF' target="_blank" aria-label="Mastodon"><i
+                                                class="fa-brands fa-mastodon" alt="Mastodon"></i></a>
+                        </li>
+                        <li><a href='malito:darkor.lf.faraday@gmail.com' target="_blank" aria-label="Email"><i
+                                                class="fa-regular fa-envelope" alt="Email"></i></a>
+                        </li>
+                </ul>
+        </section>
 
-                                </ul>
-
-                        </section>
-
-
-                        <p>&copy;
-                                <script>document.write(new Date().getFullYear())</script> por Darkor_LF
-                        </p>
-                </footer>
+        <p>&copy;
+                <script>document.write(new Date().getFullYear())</script> por Darkor_LF
+        </p>
+</footer>
         </div>
 </body>
