--- a/fiction.html
+++ b/fiction.html
@@ -266,7 +266,7 @@
             <li><a href='https://twitter.com/Darkor_LF' target="_blank" aria-label="Twitter"><i class="fa-brands fa-twitter" alt="Twitter"></i></a></li>
             <li><a href='https://mastodon.social/@darkor_LF' target="_blank" aria-label="Mastodon"><i class="fa-brands fa-mastodon" alt="Mastodon"></i></a>
             </li>
-            <li><a href='malito:darkor.lf.faraday@gmail.com' target="_blank" aria-label="Email"><i class="fa-regular fa-envelope" alt="Email"></i></a>
+            <li><a href='mailto:darkor.lf.faraday@gmail.com' target="_blank" aria-label="Email"><i class="fa-regular fa-envelope" alt="Email"></i></a>
             </li>
         </ul>
     </section>
