--- a/non-fiction.html
+++ b/non-fiction.html
@@ -406,7 +406,7 @@
                         <li><a href='https://mastodon.social/@darkor_LF' target="_blank" aria-label="Mastodon"><i
                                                 class="fa-brands fa-mastodon" alt="Mastodon"></i></a>
                         </li>
-                        <li><a href='malito:darkor.lf.faraday@gmail.com' target="_blank" aria-label="Email"><i
+                        <li><a href='mailto:darkor.lf.faraday@gmail.com' target="_blank" aria-label="Email"><i
                                                 class="fa-regular fa-envelope" alt="Email"></i></a>
                         </li>
                 </ul>
