--- a/fiction.html
+++ b/fiction.html
@@ -213,6 +213,9 @@
                                 <li class="syfy">Humor</li>
                                 <li class="syfy">Costumbrismo</li>
                                 <li class="syfy">Sáficas asexuales</li>
+                                <li class="syfy">Año: 2023</li>
+                                <li class="syfy">Palabras: 10800</li>
+                                <li class="syfy">Autoeditado</li>
                             </ul>
                             <ul>
                                 <li class="syfy"><a href="https://lektu.com/l/darkor-lf/semana-de-permiso/22021"
