--- a/index.html
+++ b/index.html
@@ -67,18 +67,17 @@
                     trabajo
                     diario le deja se dedica a leer, jugar videojuegos y ver películas y series. Tras unos años empezó a
                     tener opiniones al respecto y se coló en algunas páginas web.</p>
-                <p>Es redactora y editora en la web independiente de videojuegos <a href="https://todasgamers.com/"
+                <p>Es redactora en la web independiente de videojuegos <a href="https://todasgamers.com/"
                         target="_blank">Todas Gamers</a>, donde sólo colaboran mujeres y personas no binarias. Podéis
                     leerla opinar sobre Final Fantasy, Kingdom Hearts o que el mejor minijuego de pesca está en <i>Dark
                         Chronicle</i>. También es la directora del Podcast de Todas Gamers (aka, <a
                         href="https://todasgamers.com/category/podcast/" target="_blank">El Pugcast</a>), donde colabora
                     con la sección sobre Historia del Videojuego.</p>
                 <p>Además es colaboradora en <a href='https://lanaveinvisible.com' target="_blank">La Nave
-                        Invisible</a>, proyecto centrado en la visibilización de autoras y autores no binaries, sobre
-                    todo en la web, aunque a veces se cuela en su podcast (ganadora a Mejor página web en los Premios
-                    Ignotus 2018, 2019, 2020, 201 y 2022). También participa en el fanzine <a
+                        Invisible</a>, proyecto centrado en la visibilización de autoras y autores no binaries(ganadora a Mejor página web en los Premios
+                        Ignotus 2018, 2019, 2020, 2021 y 2022). Hasta junio de 2023, colaboró en la web y actualmente se encarga de colaborar en su podcast y la parte técnica del mismo. También participó en el fanzine <a
                         href="https://lektu.com/e/untitledzines/1539" target="_blank">Untitled Zines</a>, donde cada
-                    número gira en torno a una temática concreta.</p>
+                    número giraba en torno a una temática concreta.</p>
                 <p>
                     En 2021 impulsó la recopilación de dos libros de ensayo, <a
                         href='https://lektu.com/l/todas-gamers/todas-gamers-quinto-aniversario-vol-1-ahora-en-ebook/18108'
@@ -103,7 +102,7 @@
                     autopublicados de la serie <a href="https://lektu.com/c/darkor-lf/1288/los-viajes-de-la-islandia"
                         target="_blank">Los viajes de la Islandia</a>, space opera humorística que se centra en las
                     desventuras de la tripulación de la Vieja Islandia: <i>Protocolos revisados definitivos V6-XVI</i>,
-                    <i>La ruta de la Montaña Mística</i> y <i>Asalto a la cámara acorazada</i>. Su otra gran obsesión
+                    <i>La ruta de la Montaña Mística</i> <i>Asalto a la cámara acorazada</i> y <i>Semana de permiso</i>. Su otra gran obsesión
                     escribiendo son los viajes en el tiempo, con el relato autopublicado <i>Rebobinar</i>, o el relato
                     <a href="https://www.editorialcerbero.com/pargo/" target="_blank"><i>El rescate del pargo</i></a>
                     disponible en la web de la editorial Cerbero.
@@ -115,31 +114,34 @@
                 </p>
 
                 <h2 class="bio-breve">Biografía corta</h2>
-                <p>Antes física, ahora desarrolladora web. Es editora y redactora en Todas Gamers, además de colaborar y dirigir El
-                Pugcast. Ha autopublicado varios relatos de <i>space opera</i> y viajes en el tiempo, sus dos géneros favoritos. Si dispones de un par de semanas libres, puedes preguntarle por Kingdom Hearts, la saga Vorkosigan o Final Fantasy.</p>
-                <p>Redes sociales: <a href="https://twitter.com/Darkor_LF">Twitter</a> y <a href="https://mastodon.social/@darkor_LF">Mastodon</a></p>
+                <p>Antes física, ahora desarrolladora web. Es redactora en Todas Gamers, además de colaborar y
+                    dirigir El Pugcast. Forma parte de La Nave Invisible, primero en formato web y ahora en su podcast. Ha autopublicado varios relatos de <i>space opera</i> y viajes en el tiempo, sus dos
+                    géneros favoritos. Si dispones de un par de semanas libres, puedes preguntarle por Kingdom Hearts,
+                    la saga Vorkosigan o Final Fantasy.</p>
+                <p>Redes sociales: <a href="https://twitter.com/Darkor_LF">Twitter</a> y <a
+                        href="https://mastodon.social/@darkor_LF">Mastodon</a></p>
 
             </section>
 
         </main>
-<footer>
-    <section class="contact">
-        <h3>Contacto</h3>
-        <ul>
-            <li><a href='https://twitter.com/Darkor_LF' target="_blank" aria-label="Twitter"><i
-                        class="fa-brands fa-twitter" alt="Twitter"></i></a></li>
-            <li><a href='https://mastodon.social/@darkor_LF' target="_blank" aria-label="Mastodon"><i
-                        class="fa-brands fa-mastodon" alt="Mastodon"></i></a>
-            </li>
-            <li><a href='mailto:darkor.lf.faraday@gmail.com' target="_blank" aria-label="Email"><i
-                        class="fa-regular fa-envelope" alt="Email"></i></a>
-            </li>
-        </ul>
-    </section>
+        <footer>
+            <section class="contact">
+                <h3>Contacto</h3>
+                <ul>
+                    <li><a href='https://twitter.com/Darkor_LF' target="_blank" aria-label="Twitter"><i
+                                class="fa-brands fa-twitter" alt="Twitter"></i></a></li>
+                    <li><a href='https://mastodon.social/@darkor_LF' target="_blank" aria-label="Mastodon"><i
+                                class="fa-brands fa-mastodon" alt="Mastodon"></i></a>
+                    </li>
+                    <li><a href='mailto:darkor.lf.faraday@gmail.com' target="_blank" aria-label="Email"><i
+                                class="fa-regular fa-envelope" alt="Email"></i></a>
+                    </li>
+                </ul>
+            </section>
 
-    <p>&copy;
-        <script>document.write(new Date().getFullYear())</script> por Darkor_LF
-    </p>
-</footer>
+            <p>&copy;
+                <script>document.write(new Date().getFullYear())</script> por Darkor_LF
+            </p>
+        </footer>
     </div>
 </body>
