--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
                     dirigir El Pugcast. Forma parte de La Nave Invisible, primero en formato web y ahora en su podcast. Ha autopublicado varios relatos de <i>space opera</i> y viajes en el tiempo, sus dos
                     géneros favoritos. Si dispones de un par de semanas libres, puedes preguntarle por Kingdom Hearts,
                     la saga Vorkosigan o Final Fantasy.</p>
-                <p>Redes sociales: <a href="https://twitter.com/Darkor_LF">Twitter</a> y <a
-                        href="https://mastodon.social/@darkor_LF">Mastodon</a></p>
+                <p>Redes sociales: <a href="https://twitter.com/Darkor_LF" target="_blank">Twitter</a>, <a
+                        href="https://mastodon.social/@darkor_LF" target="_blank">Mastodon</a> y <a href="https://bsky.app/profile/darkorlf.bsky.social" target="_blank">Bluesky</a></p>
 
             </section>
 
