--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                         href='https://lektu.com/l/laura-moran-iglesias/la-nave-invisible-5-anos-de-travesia/18875'
                         target="_blank"><i>La Nave Invisible. Cinco años de travesía</i></a> (premio Ignotus a Mejor
                     Libro de Ensayo 2022), con el artículo «Moto
-                    Hagio y la generación del 24».
+                    Hagio y la generación del 24». Además, fue parte del equipo seleccionador del <i><a href="https://lektu.com/l/aefcft/fabricantes-de-suenos-2019-2020/22521" target="_blank">Fabricantes de Sueños 2019-2020</a></i>, junto parte de la tripulación de La Nave Invisible, para la <a href="https://www.asociacionportico.com" target="_blank">asociación Pórtico</a>. 
                 </p>
                 <p>En los ratos que tiene libres se dedica a escribir ficción. Actualmente cuenta con tres relatos
                     autopublicados de la serie <a href="https://lektu.com/c/darkor-lf/1288/los-viajes-de-la-islandia"
