--- a/index.html
+++ b/index.html
@@ -98,12 +98,12 @@
                     Libro de Ensayo 2022), con el artículo «Moto
                     Hagio y la generación del 24». Además, fue parte del equipo seleccionador del <i><a href="https://lektu.com/l/aefcft/fabricantes-de-suenos-2019-2020/22521" target="_blank">Fabricantes de Sueños 2019-2020</a></i>, junto parte de la tripulación de La Nave Invisible, para la <a href="https://www.asociacionportico.com" target="_blank">asociación Pórtico</a>. 
                 </p>
-                <p>En los ratos que tiene libres se dedica a escribir ficción. Actualmente cuenta con tres relatos
+                <p>En los ratos que tiene libres se dedica a escribir ficción. Actualmente cuenta con cuatro relatos
                     autopublicados de la serie <a href="https://lektu.com/c/darkor-lf/1288/los-viajes-de-la-islandia"
                         target="_blank">Los viajes de la Islandia</a>, space opera humorística que se centra en las
                     desventuras de la tripulación de la Vieja Islandia: <i>Protocolos revisados definitivos V6-XVI</i>,
                     <i>La ruta de la Montaña Mística</i> <i>Asalto a la cámara acorazada</i> y <i>Semana de permiso</i>. Su otra gran obsesión
-                    escribiendo son los viajes en el tiempo, con el relato autopublicado <i>Rebobinar</i>, o el relato
+                    escribiendo son los viajes en el tiempo, con el relato autopublicado <a href="https://lektu.com/l/darkor-lf/rebobinar/18183" target="_blank"><i>Rebobinar</i></a>, o el relato
                     <a href="https://www.editorialcerbero.com/pargo/" target="_blank"><i>El rescate del pargo</i></a>
                     disponible en la web de la editorial Cerbero.
                 <p>Tiene hiperfijaciones periódicas entre las que destacan: <i>Hamilton</i>, la mitología nórdica,
